--- a/src/test/resources/TestsData(template).properties
+++ b/src/test/resources/TestsData(template).properties
@@ -1,6 +1,6 @@
 #Environvment (Production, UAT)
-Env=Staging
-#Env=Production
+#Env=Staging
+Env=Production
 
 #QA number (Your number)
 QANumber=0
@@ -16,6 +16,6 @@ LoginPassword01=mhRm4i8VSQ53XXY7cprAtFYZ2L7yKdcQ
 LoginPassword02=mhRm4i8VSQ53XXY7cprAtFYZ2L7yKdcQ
 LoginPassword03=mhRm4i8VSQ53XXY7cprAtFYZ2L7yKdcQ
 
-FacebookUserEmail00=
-FacebookUserPass00=
-FacebookUserName00=
+FacebookUserEmail00=diana8899877@gmail.com
+FacebookUserPass00=123456diana
+FacebookUserName00=Diana Cherednyk
