+ tests for dish, drink,list objects

--- a/src/test/resources/TestsData(template).properties
+++ b/src/test/resources/TestsData(template).properties
@@ -19,3 +19,9 @@ LoginPassword03=mhRm4i8VSQ53XXY7cprAtFYZ2L7yKdcQ
 FacebookUserEmail00=
 FacebookUserPass00=
 FacebookUserName00=
+RestaurantObject=vmv-mom-s-pies
+RestaurantName=Mom's pies
+ListObject=kpg-3r76a6-kings-menu
+ListObjectName=Kings menu
+DrinkObject=wjd-sea-tea
+DrinkObjectName=Sea tea
